--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -67,7 +67,7 @@
   margin: 0.5rem;
   padding: 2rem 1rem;
   border-radius: 1rem;
-  /* height: 100px; */
+  border: 2px solid #ececec;
 }
 
 .pokemon .number {
